--- a/src/app/components/order-items/order-items.component.css
+++ b/src/app/components/order-items/order-items.component.css
@@ -34,5 +34,6 @@ p{
 .itemList{
     height: 110px;
     overflow-y: auto;
+    scrollbar-width: thin;
     margin-top: 10px;
 }
