--- a/src/app/pages/orders/orders.component.css
+++ b/src/app/pages/orders/orders.component.css
@@ -8,6 +8,7 @@
     background-color: whitesmoke;
     padding: 0px 20px;
     overflow-y: auto;
+    scrollbar-width: thin;
 }
 .right{
     width: 30%;
@@ -86,6 +87,7 @@ h4{
     gap: 20px;
     margin-top: 20px;
     overflow-x: scroll;
+    scrollbar-width: thin;
     position: relative;
 }
 .cardContent{
@@ -126,6 +128,7 @@ mat-icon{
     align-items: center;
     gap: 20px;
     overflow-x: scroll;
+    scrollbar-width: thin;
 }
 .cardsHeader{
     display: flex;
